src/test/resources/syntax_errors/not_a_type.notc
void main () {
    not_a_type x = 54;
}
